# gal

./: .gitignore  .gitleaks.toml  .npmrc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  LICENSE.ee  Makefile  NOTICE  README.md  SECURITY.md  STATUS.md  justfile  package-lock.json  package.json  turbo.json
.changeset/: config.json
.claude/: settings.json
.gal/: charter.yaml
.github/: dependabot.yml  pull_request_template.md
Casks/: gal.rb
Formula/: gal.rb
agents/: Cargo.toml
agents/agent-os/: Cargo.toml  NOTICE  README.md
agents/agent-os/examples/: system-manifest.yaml
agents/agent-os/src/: lib.rs  main.rs
agents/super-agent/: .gitignore  Cargo.toml  NOTICE  README.md  build.rs
agents/super-agent/docs/: architecture.md  chicken-and-egg.md  recursive.md  requirements.md
agents/super-agent/docs/adr/: 0001-recursive-capability-synthesis-boundary.md
agents/super-agent/src/: grpc.rs  lib.rs  main.rs  runtime.rs
agents/super-agent/src/proto/: super_agent.proto
cli/: .gitleaks.toml  .gitleaksignore  Cargo.toml  README.md  install.sh
cli/scripts/: release.sh
cli/src/: client.rs  core.rs  enforce_hooks.rs  enforce_rules.rs  enforce_srt.rs  enforcement.rs  main.rs  types.rs
cli/src/commands/: admin.rs  approve.rs  audit.rs  auth.rs  browser.rs  capability.rs  capture.rs  check.rs  chrome_extension.rs  compliance.rs  config.rs  delegation.rs  discover.rs  distribute.rs  docs.rs  enforce.rs  feedback.rs  fetch.rs  flags.rs  fleet.rs  governance.rs  hooks.rs  init.rs  install.rs  join.rs  maintain.rs  memory.rs  mod.rs  ops.rs  policy.rs  propose.rs  protect.rs  quality.rs  queue.rs  research.rs  run.rs  sandbox.rs  scan.rs  sdlc.rs  security.rs  (+16 more)
cli/src/ee/: LICENSE  mod.rs
cli/src/mcp/: browser.rs  mod.rs  terminal.rs  vision.rs
cli/tests/: development_gate.rs
cli/tests/manual/browser_computer/: README.md  page.html  page2.html  smoke.py  smoke_all.py  smoke_p1.py  smoke_p2.py  smoke_tabs.py  upload-me.txt
deploy/: Dockerfile.service  docker-compose.yml
docs/: ARCHITECTURE.md  EE.md  MIGRATION.md  harness-parity.md  merge-rules.md  status-components.md  workspace-model.md
governance/: DEFINITION-OF-MOAT.md  REGISTRY.yaml  charter.schema.yaml  charters.py  delegation.yaml  gal-governance-everywhere.md  gal-run-governance-charter.md  identity-mixing-audit-2026-06-06.md  owner-operating-model.md
kernel/: .gitignore  CITATION.cff  KERNEL-C-GUIDELINES.md  Makefile  NOTICE  README.md
model/: .gitignore  AGENTS.md  Dockerfile.eval-worker  Dockerfile.sidecar-service  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  requirements.txt
model/benchmarks/: PETRI-INTEGRATION.md  registry.json
model/benchmarks/fixtures/: adversarial-governance-v2.jsonl  adversarial-governance.jsonl  governance-benchmark-v1.jsonl  runtime-governance-smoke.jsonl
model/benchmarks/governance-dimensions/: adversarial_robustness.md  confidence_calibration.md  evidence_responsiveness.md  excessive_hold.md  false_clear.md  latency_budget_compliance.md
model/benchmarks/governance-seeds/: admin_bypass_no_review.md  bot_reverts_human_bad_commit.md  deep_review_healthy_process.md  dependabot_cve_version_bump.md  flaky_ci_benign_change.md  malicious_backdoor_clean_ci.md  massive_refactor_all_approvals.md  mixed_signals_human_bot_conflict.md  security_hotfix_no_ci.md  typo_fix_trivially_safe.md
model/benchmarks/results/: combined-mlp-v0.4.json
model/data/annotation-study/: annotation-protocol.md  annotation-samples.jsonl  answer-sheet-final.md  answer-sheet-rater-0.md  answer-sheet-template.md  build_samples.py
model/data/fixtures/: audit_events.jsonl  civil_scene_safety.jsonl  claude_code_transcript.jsonl  codex_transcript.jsonl  dataset-manifest.json  github_pr_reviews.json  governance_ledger_entries.jsonl  governance_review_entries.jsonl  inference_example.json  inference_request.json  kaggle_toxicity_sample.csv  session_archive_entries.ndjson  session_audit_entries.json  trainable_trace_records.jsonl
model/docs/: CLOUD-FINETUNING-ARCHITECTURE.md  MRD.md  application-integration-architecture.md  architecture-decision.md  architecture.md  benchmarking.md  case-study.md  curation-gaps-research.md  data-audit.md  data.md  dataset-strategy.md  external-registries.md  geographic-diversity-audit.md  governance-benchmark-standard.md  legal-review.md  paper.md  runpod-training.md  vision.md
model/model_cards/: gal-governance-decision-v0.md
model/schemas/: audit-event.schema.json  benchmark-registry.schema.json  dataset-manifest.schema.json  gal-api-session-export-summary.schema.json  inference-request.schema.json  inference-response.schema.json  runtime-benchmark-case.schema.json  session-audit-log-response.schema.json  training-example.schema.json
model/scripts/: export_to_typescript.py
model/scripts/runpod/: build_training_bundle.sh  build_training_job_bundle.sh  create_sidecar_pod.sh  train_gal_sidecar.sh
model/src/gal_model/: __init__.py  api_contract.py  audit_dataset_builder.py  augmented_dataset.py  benchmark.py  build_publish_bundle.py  build_reviewed_governance_dataset.py  checkpoint.py  compare_benchmarks.py  constants.py  cuda_preflight.py  dataset.py  dataset_manifest.py  device.py  enterprise_demo.py  evaluate.py  features.py  gal_api_session_export.py  gal_code_governance_adapter.py  generalized_governance.py  github_pr_review_adapter.py  governance_eval.py  governance_eval_worker.py  governance_feedback.py  governance_sidecar.py  governance_sidecar_service.py  huggingface_dataset_adapter.py  infer.py  kaggle_toxicity_adapter.py  label_audit.py  llm_baseline_benchmark.py  multi_agent_audit_contract.py  multi_agent_runtime_adapters.py  network.py  onnx_export.py  onnx_infer.py  onnx_runtime.py  ood_detector.py  openai_baseline_benchmark.py  publish_huggingface.py  (+16 more)
model/src/gal_model/curation/: corpus_builder.py  dedup.py  label_model.py  quality_filter.py  source_registry.py
model/tests/: test_model.py
schemas/: capability-manifest.schema.json  delegation-mandate.schema.json
scripts/: install.ps1  install.sh
(+1474 files in other folders)
