[package]
name = "super-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12", features = ["transport"] }

[build-dependencies]
protoc-bin-vendored = "3.1"
tonic-build = "0.12"

[dev-dependencies]
tokio-stream = { version = "0.1", features = ["net"] }
